--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Great Front End - Marketing | Testimonial Card</title>
   </head>
-  <body class="antialiased text-render-optimize">
+  <body class="antialiased text-render-optimize bg-gradient-148 font-noto-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
