--- a/projects/01-testimonial-card/index.html
+++ b/projects/01-testimonial-card/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Great Front End - Marketing | Blog Card</title>
+    <title>Great Front End - Marketing | Testimonial Card</title>
   </head>
   <body class="antialiased text-render-optimize bg-gradient-148 font-noto-sans">
     <div id="root"></div>
