⚡️ Improve ProfileCard performance(lighthouse)
1. Add <a> alt, aria-label to improve accessibility 2. Add <meta> description for SEO

--- a/projects/03-profile-card/index.html
+++ b/projects/03-profile-card/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Profile Card for making TheGreatFrontEnd-Marketing project"
+    />
     <title>Great Front End - Marketing | Profile Card</title>
   </head>
   <body class="antialiased text-render-optimize bg-gradient-148 font-noto-sans">
