✨ Add email validation, interaction(API) part and snackBar animations
(as title mentioned)

--- a/projects/11-newsletter-section/index.html
+++ b/projects/11-newsletter-section/index.html
@@ -10,8 +10,11 @@
     />
     <title>Great Front End - Marketing | Newsletter Section</title>
   </head>
-  <body class="antialiased text-render-optimize bg-gradient-148 font-noto-sans">
+  <body
+    class="antialiased text-render-optimize bg-gradient-148 font-noto-sans w-full"
+  >
     <div id="root"></div>
+    <div id="portal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
