Hero Section Bullets.

--- a/projects/05-hero-section-bullets/index.html
+++ b/projects/05-hero-section-bullets/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Hero Section Simple for making TheGreatFrontEnd-Marketing project"
+      content="Hero Section Bullets for making TheGreatFrontEnd-Marketing project"
     />
-    <title>Great Front End - Marketing | Hero Section Simple</title>
+    <title>Great Front End - Marketing | Hero Section Bullets</title>
   </head>
   <body>
     <div id="root"></div>
